# chuckclose

./: .gitignore  AGENTS.md  README.md  ai_api.py  chuckclose.py  create_test_image.py  env_template.txt  mosaic.py  pyproject.toml  requirements.txt  sample_runs.txt  setup.sh
.agents/memory/daily/2026-04-02/: summary.md
.agents/memory/daily/2026-04-02/events/: 2026-04-02T23-24-15Z--davidcthomas--thread_db1e906f-a9dc-4a61-823f-471349f95238--turn_turn_7109fd7436.md  2026-04-02T23-50-26Z--davidcthomas--thread_db1e906f-a9dc-4a61-823f-471349f95238--turn_turn_e1e6ec8135.md
.agents/memory/daily/2026-04-03/: summary.md
.agents/memory/daily/2026-04-03/events/: 2026-04-03T00-17-41Z--davidcthomas--thread_db1e906f-a9dc-4a61-823f-471349f95238--turn_turn_87a871fc01.md  2026-04-03T02-18-28Z--davidcthomas--thread_db1e906f-a9dc-4a61-823f-471349f95238--turn_turn_8d3cbc85f8.md  2026-04-03T13-19-03Z--davidcthomas--thread_db1e906f-a9dc-4a61-823f-471349f95238--turn_turn_471b9771f8.md  2026-04-03T14-58-24Z--davidcthomas--thread_db1e906f-a9dc-4a61-823f-471349f95238--turn_turn_e7ed8c1501.md  2026-04-03T20-11-28Z--davidcthomas--thread_db1e906f-a9dc-4a61-823f-471349f95238--turn_turn_59bbba94ff.md  2026-04-03T20-42-42Z--davidcthomas--thread_db1e906f-a9dc-4a61-823f-471349f95238--turn_turn_e44aaf5aff.md  2026-04-03T20-43-50Z--davidcthomas--thread_db1e906f-a9dc-4a61-823f-471349f95238--turn_turn_5e1bc217dd.md  (+6 more)
.agents/memory/daily/2026-04-05/: summary.md
.codex/local/: last-notify-payload.json
doc/: mosaic_design_specification.md
src/mosaic/: __init__.py  __main__.py  ai_api.py  exceptions.py  mosaic_generator.py  mosaic_image_inputs.py  mosaic_settings.py  storyboard_decomposer_structured_prompt.py  video_storyboard.py
tests/: conftest.py  create_test_image.py  test_cli_helpers.py  test_expanded_coverage.py  test_mosaic_cli_storyboard_mode.py  test_mosaic_generator_helpers.py  test_mosaic_image_inputs.py  test_video_from_buffers.py  test_video_generation_integration.py  test_video_storyboard.py
(+8 files in other folders)
